--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Wines</h1>
-<p>Available as of <%= @available_at %></p>
+<p>Available as of <%= formatted_time(@available_at) %></p>
 <ol>
    <% @wines.each do |wine| %>
-     <li><%= wine.name %> from <%= wine.year %></li>
+     <li><%= link_to(wine.name, wine) %> of varietal <%= wine.varietal %> from <%= wine.winery %></li>
    <% end %>
  </ol>  
