--- a/app/views/wines/_form1.html.erb
+++ b/app/views/wines/_form1.html.erb
@@ -6,7 +6,7 @@
    <%= f.label :varietal %> <%= f.text_field :varietal%><br />
    <p>
    	  <%= f.submit 'save' %> 
-        <%= button_to "Cancel2", wines_path, :class => "button" , :method => :get %>
+        <%= button_to "Cancel", wines_path, :class => "button" , :method => :get %>
 
    	  <%= link_to 'All Wines', wines_path %>
    </p>
