--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -1,4 +1,5 @@
-<%= render 'shared/flashes' %>
+<% content_for :title, @wine.name %>
+
 <article class="wine">
   <header>
     <h2><%= @wine.name %></h2>
@@ -9,9 +10,8 @@
   <p><label>Varietal:</label> <%= @wine.varietal %></p>
 </article>
 
-<%= link_to 'All Wines', wines_path %>
 
-| <%= link_to 'Edit', edit_wine_path(@wine) %>
+<%= link_to 'Edit', edit_wine_path(@wine) %>
 
 | <%= button_to 'Delete', @wine,  method: :delete,
              data: { confirm: 'Are you sure?' } %>
