--- a/app/views/wines/_form1.html.erb
+++ b/app/views/wines/_form1.html.erb
@@ -5,10 +5,11 @@
    <%= f.label :year %> <%= f.text_field :year %><br />
    <%= f.label :winery %> <%= f.text_field :winery %><br />
    <%= f.label :country %> <%= f.text_field :country %><br />
-   <%= f.label :varietal %> <%= f.text_field :varietal%><br />
+   <%= f.label :varietal %> <%= f.select :varietal, Wine::VARIETALS, { prompt: "Pick one" } %><br />
    <p>
    	  <%= f.submit 'save' %> 
-        <%= button_to "Cancel", wines_path, :class => "button" , :method => :get %>
+    
+       
 
    </p>
 
