--- a/app/views/wines/edit.html.erb
+++ b/app/views/wines/edit.html.erb
@@ -1,2 +1,3 @@
 <h1>Editing <%= @wine.name %></h1>
 <%= render 'form1' %>
+<%= button_to "Cancel", wine_path, :class => "button" , :method => :get %>
