--- a/app/views/wines/new.html.erb
+++ b/app/views/wines/new.html.erb
@@ -1,2 +1,3 @@
 <h1>Create a new wine</h1>
 <%= render 'form1' %>
+ <%= button_to "Cancel", { action: "new" }, :class => "button" , :method => :get %>
