--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -15,3 +15,8 @@
 
 | <%= button_to 'Delete', @wine,  method: :delete,
              data: { confirm: 'Are you sure?' } %>
+<p>
+	Read all
+	<%= link_to pluralize(@wine.log_entries.size, 'Log Entries'),
+	    wine_log_reviews_path(@wine) %>
+</p>
